--- a/week3/index.css
+++ b/week3/index.css
@@ -753,8 +753,17 @@ hr {
     border-width: 2px;
     border-color: red;
     border-radius: 10px;
-    padding-top: 5px;
-    padding-bottom: 15px;
+    display: block;
+    justify-content: space-between;
+    padding: 10px 40px 10px 40px;
+}
+
+.main_info
+{
+    display: inline-block;
+    padding: 10px 70px 10px 40px;
+    margin: 10px 10px 10px 10px;
+    width: 100%;
 }
 
 .item_button
